2013-11-08  Alessandro <aantonello@paralaxe.com.br>

	* CStringTable.java (Load()): Bug. Was not setting the character code when
	loading the stringtable XML file. Forgot that the default is Latin1.
	* AbstractView.java (level()): Added function to change the image level of
	an ImageView.
	* doxyfile: Configuration updated.

2013-11-04  Alessandro <aantonello@paralaxe.com.br>

	* CAndroidGridView.java: Buggy! Constructors was not calling _internal_init().

2013-11-03  Alessandro <aantonello@paralaxe.com.br>

	* CAndroidApp.java (loadDrawable()): Added function to load a drawable
	from a resource identifier.

2013-11-01  Alessandro <aantonello@paralaxe.com.br>

	* time_t.java (getWeekDayName(), getMonthName(), toString()): These
	functions were updated to get the correct day and month names from the
	'assets' Android directory.

	* CAndroidApp.java (getMessage()): Function changed to use the SFAsset
	class to load error messages correctly.

	* CStringTable.java: Two new functions added.

	* SFAsset.java: New class to work with resources in the 'assets' Android
	directory.

2013-09-13  Alessandro <aantonello@paralaxe.com.br>

	* thread_t.java: Algumas saídas de depuração removidas.

	* CXmlFile.java (CXmlFile::log()): Grava os dados do arquivo na saída de
	depuração.

	* CXmlNode.java (CXmlNode::log()): Grava os dados do elemento na saída de
	depuração.

	* strings.java (strings::repeat()): Nova função que cria uma string a
	partir da repetição de um caractere.

2013-09-11  Alessandro <aantonello@paralaxe.com.br>

	* arrays.java (arrays::join()): Nova função para "juntar" os elementos de
	uma matriz utilizando um separador predefinido.

2013-06-27  Alessandro <aantonello@paralaxe.com.br>

	* CXmlFile.java (Load(stream_t)): Nova função para ler um arquivo XML a
	partir dos dados em um objet 'stream_t'.

	* CXmlTok.java (LoadStream(stream_t)): Duas novas funções para ler um
	arquivo XML a partir de um objeto 'stream_t'.
