@@ -1,3 +1,3 @@
-Version 2.4.67
+Version 2.4.94
 
-- CAndroidPagerView.java: Completely rewrote of the class.
+- CAndroidPagerView.java: Completly rewrote of the class. Passed test.
